tests/algorithms/transpiler/CPP/backtracking/match_word_pattern.cpp
// Generated by Mochi transpiler v0.10.59 on 2025-08-06 16:44:22 GMT+7
#include <iostream>
#include <string>
#include <vector>
#include <sstream>
#include <iomanip>
#include <cmath>
#include <optional>
#include <any>
#include <type_traits>
#include <cstdlib>
#include <chrono>
#include <sys/resource.h>
#include <unistd.h>
#include <cstdio>
#include <map>


static int _now() {
    static long long seed = 0;
    static bool seeded = false;
    if (!seeded) {
        const char* s = std::getenv("MOCHI_NOW_SEED");
        if (s && *s) { seed = std::atoll(s); seeded = true; }
    }
    if (seeded) {
        seed = (seed * 1664525 + 1013904223) % 2147483647;
        return static_cast<int>(seed);
    }
    return (int)(std::chrono::duration_cast<std::chrono::microseconds>(std::chrono::system_clock::now().time_since_epoch()).count() % 2147483647);
}
static long long _mem() {
#if defined(__linux__)
    long long rss = 0;
    FILE* f = std::fopen("/proc/self/statm", "r");
    if (f) { long long pages; if (std::fscanf(f, "%*s %lld", &pages) == 1) rss = pages * sysconf(_SC_PAGESIZE); std::fclose(f); }
    if (rss == 0) {
        f = std::fopen("/proc/self/status", "r");
        if (f) {
            char buf[256];
            while (std::fgets(buf, sizeof buf, f)) {
                long long val;
                if (std::sscanf(buf, "VmRSS: %lld", &val) == 1 || std::sscanf(buf, "VmHWM: %lld", &val) == 1) {
                    rss = val * 1024;
                    break;
                }
            }
            std::fclose(f);
        }
    }
    if (rss == 0) {
        struct rusage usage{};
        getrusage(RUSAGE_SELF, &usage);
        rss = (long long)usage.ru_maxrss * 1024;
    }
    return rss;
#elif defined(__APPLE__)
    struct rusage usage{};
    getrusage(RUSAGE_SELF, &usage);
    return (long long)usage.ru_maxrss;
#else
    struct rusage usage{};
    getrusage(RUSAGE_SELF, &usage);
    return (long long)usage.ru_maxrss * 1024;
#endif
}
static long long _bench_now() {
    return std::chrono::duration_cast<std::chrono::microseconds>(std::chrono::system_clock::now().time_since_epoch()).count();
}
static void any_to_stream(std::ostream& os, const std::any& val) {
    if(val.type() == typeid(int)) os << std::any_cast<int>(val);
    else if(val.type() == typeid(int64_t)) os << std::any_cast<int64_t>(val);
    else if(val.type() == typeid(double)) os << std::any_cast<double>(val);
    else if(val.type() == typeid(bool)) os << (std::any_cast<bool>(val) ? "true" : "false");
    else if(val.type() == typeid(std::string)) os << '"' << std::any_cast<std::string>(val) << '"';
    else if(val.type() == typeid(std::vector<int64_t>)) { const auto& v = std::any_cast<const std::vector<int64_t>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ' '; os << v[i]; } os << ']'; }
    else if(val.type() == typeid(std::vector<std::vector<int64_t>>)) { const auto& vv = std::any_cast<const std::vector<std::vector<int64_t>>&>(val); os << '['; for(size_t i=0;i<vv.size();++i){ if(i>0) os << ' '; const auto& v = vv[i]; os << '['; for(size_t j=0;j<v.size();++j){ if(j>0) os << ' '; os << v[j]; } os << ']'; } os << ']'; }
    else if(val.type() == typeid(std::vector<std::string>)) { const auto& v = std::any_cast<const std::vector<std::string>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ' '; os << '"' << v[i] << '"'; } os << ']'; }
    else if(val.type() == typeid(std::vector<std::any>)) { const auto& v = std::any_cast<const std::vector<std::any>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; any_to_stream(os, v[i]); } os << ']'; }
    else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
    else os << "<any>";
}
static double any_to_double(const std::any& v) {
    if(v.type() == typeid(int)) return (double)std::any_cast<int>(v);
    if(v.type() == typeid(double)) return std::any_cast<double>(v);
    return 0;
}
static std::string any_to_string(const std::any& v) {
    if(v.type() == typeid(std::string)) return std::any_cast<std::string>(v);
    if(v.type() == typeid(int)) return std::to_string(std::any_cast<int>(v));
    if(v.type() == typeid(int64_t)) return std::to_string(std::any_cast<int64_t>(v));
    if(v.type() == typeid(double)) { std::ostringstream ss; ss << std::any_cast<double>(v); return ss.str(); }
    if(v.type() == typeid(bool)) return std::any_cast<bool>(v) ? "true" : "false";
    return std::string();
}
template <typename T>
std::ostream& operator<<(std::ostream& os, const std::vector<T>& vec) {
    os << "[";
    for(size_t i=0;i<vec.size();++i){ if(i>0) os << ' '; if constexpr(std::is_same_v<T, std::any>) any_to_stream(os, vec[i]); else os << vec[i]; }
    os << "]";
    return os;
}


template<typename T> std::string _to_string(const T& v) {
    std::ostringstream ss;
    ss << std::boolalpha << v;
    return ss.str();
}

std::string get_value(const std::vector<std::string>& keys, const std::vector<std::string>& values, std::string key);
bool contains_value(const std::vector<std::string>& values, std::string value);
bool backtrack(std::string pattern, std::string input_string, int64_t pi, int64_t si, const std::vector<std::string>& keys, const std::vector<std::string>& values);
bool match_word_pattern(std::string pattern, std::string input_string);
int main();

std::string get_value(const std::vector<std::string>& keys, const std::vector<std::string>& values, std::string key) {
    int64_t i = int64_t(0);
    while ((i < keys.size())) {
        if ((keys[i] == key)) {
            return values[i];
        }
        i = (i + int64_t(1));
    }
    return std::any_cast<std::string>(nullptr);
}

bool contains_value(const std::vector<std::string>& values, std::string value) {
    int64_t i = int64_t(0);
    while ((i < values.size())) {
        if ((values[i] == value)) {
            return true;
        }
        i = (i + int64_t(1));
    }
    return false;
}

bool backtrack(std::string pattern, std::string input_string, int64_t pi, int64_t si, const std::vector<std::string>& keys, const std::vector<std::string>& values) {
    if (((pi == pattern.size()) && (si == input_string.size()))) {
        return true;
    }
    if (((pi == pattern.size()) || (si == input_string.size()))) {
        return false;
    }
    std::string ch = pattern.substr(pi, (pi + int64_t(1)) - pi);
    std::string mapped = get_value(keys, values, ch);
    if ((mapped != any_to_string(nullptr))) {
        if ((input_string.substr(si, (si + mapped.size()) - si) == mapped)) {
            return backtrack(pattern, input_string, (pi + int64_t(1)), (int64_t)((si + mapped.size())), keys, values);
        }
        return false;
    }
    int64_t end = (si + int64_t(1));
    while ((end <= input_string.size())) {
        std::string substr = input_string.substr(si, end - si);
        if (contains_value(values, substr)) {
            end = (end + int64_t(1));
            continue;
        }
        auto new_keys = ([&]{ auto __tmp = keys; __tmp.push_back(ch); return __tmp; }());
        auto new_values = ([&]{ auto __tmp = values; __tmp.push_back(substr); return __tmp; }());
        if (backtrack(pattern, input_string, (pi + int64_t(1)), end, (std::vector<std::string>)(new_keys), (std::vector<std::string>)(new_values))) {
            return true;
        }
        end = (end + int64_t(1));
    }
    return false;
}

bool match_word_pattern(std::string pattern, std::string input_string) {
    std::vector<std::string> keys = {};
    std::vector<std::string> values = {};
    return backtrack(pattern, input_string, int64_t(0), int64_t(0), keys, values);
}

int main() {
    {
        struct __BenchGuard {
            long long start;
            __BenchGuard() : start(_bench_now()) {}
            ~__BenchGuard() {
                    auto __bench_end = _bench_now();
                    auto __bench_mem = _mem();
                    auto __bench_dur = __bench_end - start;
                    std::cout << "{\n  \"duration_us\": " << __bench_dur << ",\n  \"memory_bytes\": " << __bench_mem << ",\n  \"name\": \"main\"\n}" << std::endl;
            }
        } __bench_guard;
        std::cout << (match_word_pattern(std::string("aba"), std::string("GraphTreesGraph")) ? "true" : "false");
        std::cout << std::endl;
        std::cout << (match_word_pattern(std::string("xyx"), std::string("PythonRubyPython")) ? "true" : "false");
        std::cout << std::endl;
        std::cout << (match_word_pattern(std::string("GG"), std::string("PythonJavaPython")) ? "true" : "false");
        std::cout << std::endl;
    }
    return 0;
}
